solved csrf token error. changed some routes in gatewayconfig, changed application properties, yml of gateway, changed versions of dependenies in gateway. direct as well as gteway routes works for every endpoints